src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Billing_County__c</fullName>
        <description>The county detail for the Billing Address.</description>
        <label>Billing County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the current Address record for this Account. The Account&apos;s Billing Address field is populated with the address fields from the current Address record.</description>
        <inlineHelpText>Lookup to the current Address record for this Account. The Account&apos;s Billing Address field is populated with the address fields from the current Address record.</inlineHelpText>
        <label>Current Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Accounts (Current Address)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The main Contact for a Household or Administrative Account.</description>
        <inlineHelpText>The main Contact for a Household or Administrative Account.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_County__c</fullName>
        <description>The county detail for the Shipping Address.</description>
        <label>Shipping County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>